Fix nav bar on mobile overlapping text

--- a/css/header.css
+++ b/css/header.css
@@ -89,7 +89,7 @@
     }
 
     .header-nav-item-button{
-        font-size: 23px;
+        font-size: 15px;
     }
 
     .logo-container{
